--- a/page-extra/page-hasil.html
+++ b/page-extra/page-hasil.html
@@ -6,6 +6,9 @@
     <title>Vision banding</title>
     <link rel="stylesheet" href="../assets/css/style-bandingkan.css" />
     <link rel="stylesheet" href="../assets/css/style-hasil.css" />
+    <link rel="stylesheet" href="../assets/css/navbar.css" />
+    <link rel="stylesheet" href="../assets/css/responsive.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,9 +19,20 @@
   <body>
     <section-isi-banding>
       <!-- Navbar banding start -->
-
+      <nav class="navbar nav text-dark p-2 pt-5">
+        <div class="nav-button" id="navButton">☰</div>
+        <ul
+          class="nav-content d-flex justify-content-center align-items-center gap-4 w-auto bg-white p-2 ps-4 pe-4 rounded rounded-5"
+        >
+          <li class="nav-item active"><a href="../index.html">Beranda</a></li>
+          <li class="nav-item">
+            <a href="page-bandingkan.html">Bandingkan</a>
+          </li>
+          <li class="nav-item"><a href="page-panduan.html">Panduan</a></li>
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </ul>
+      </nav>
       <!-- Navbar banding end -->
-       
 
       <!-- content banding start -->
       <div id="content">
@@ -26,9 +40,70 @@
       </div>
       <!-- content banding end -->
 
-
       <!-- footer start -->
-
+      <div id="footer">
+        <div class="row ps-5" id="footer">
+          <div class="col">
+            <ul class="fw-light">
+              <li
+                class="list-group-item fw-bold fst-italic"
+                id="judulKiriFooter"
+              >
+                Explore
+              </li>
+              <li class="p-1 list-group-item">Beranda</li>
+              <li class="p-1 list-group-item">VR</li>
+              <li class="p-1 list-group-item">Bandingkan</li>
+              <li class="p-1 list-group-item">Panduan</li>
+            </ul>
+          </div>
+          <div class="col">
+            <ul>
+              <li class="list-group-item fw-bold" id="judulTengahFooter">
+                Vision
+              </li>
+              <li class="p-1 list-group-item" id="wandiPengertianFooter">
+                Virtual Reality atau biasa kita sebut VR adalah suatu teknologi
+                yang memungkinkan manusia untuk melihat dunia yang berbeda.
+              </li>
+              <li class="list-group-item position-relative">
+                <div class="d-flex fbutton">
+                  <input
+                    id="wandiInputFooter"
+                    type="text"
+                    placeholder="Masukan Pesan"
+                    class="form-control rounded-3"
+                  />
+                  <button class="btn rounded-3" id="wandiButtonFooter">
+                    Kirim
+                  </button>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="col gambar">
+            <img src="../assets/img/Rectangle 84.png" id="wandiGambarFooter" />
+          </div>
+          <div class="d-flex justify-content-center">
+            <hr clas="" style="width: 95%" />
+          </div>
+          <div class="container">
+            <div class="row bottom">
+              <div class="col-sm-5 col-md-5 ms-5 fw-medium cp">
+                <p class="copyright fs-6">
+                  © Copyright 2024 by The Visionaries
+                </p>
+              </div>
+              <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0 text-end">
+                <img src="../assets/img/instagram.svg" />
+                <img src="../assets/img/facebook.svg" class="mx-2" />
+                <img src="../assets/img/linkedin.svg" class="me-2" />
+                <img src="../assets/img/twitter.svg" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <!-- footer end -->
     </section-isi-banding>
 
