update responsive & style page hasil banding

--- a/page-extra/page-spec.html
+++ b/page-extra/page-spec.html
@@ -12,8 +12,9 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../assets/css/navbar.css" />
-    <link rel="stylesheet" href="../assets/css/responsive.css" />
     <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/footer.css">
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -117,5 +118,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="../assets/js/script-spec.js"></script>
+    <script src="../assets/js/img-slide.js"></script>
   </body>
 </html>
