--- a/page-extra/page-bandingkan.html
+++ b/page-extra/page-bandingkan.html
@@ -6,8 +6,9 @@
     <title>Vision banding</title>
     <link rel="stylesheet" href="../assets/css/style-bandingkan.css" />
     <link rel="stylesheet" href="../assets/css/navbar.css" />
-    <link rel="stylesheet" href="../assets/css/responsive.css" />
+    <link rel="stylesheet" href="../assets/css/nav-responsive.css">
     <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/footer.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,8 +25,8 @@
           <ul
             class="nav-content d-flex justify-content-center align-items-center gap-4 w-auto bg-white p-2 ps-4 pe-4 rounded rounded-5"
           >
-            <li class="nav-item active"><a href="../index.html">Beranda</a></li>
-            <li class="nav-item">
+            <li class="nav-item "><a href="../index.html">Beranda</a></li>
+            <li class="nav-item active">
               <a href="page-bandingkan.html">Bandingkan</a>
             </li>
             <li class="nav-item"><a href="page-panduan.html">Panduan</a></li>
@@ -233,5 +234,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="../assets/js/script-bandingkan.js"></script>
+    <script src="../assets/js/img-slide.js"></script>
   </body>
 </html>
