--- a/page-extra/page-hasil.html
+++ b/page-extra/page-hasil.html
@@ -6,9 +6,10 @@
     <title>Vision banding</title>
     <link rel="stylesheet" href="../assets/css/style-bandingkan.css" />
     <link rel="stylesheet" href="../assets/css/style-hasil.css" />
-    <link rel="stylesheet" href="../assets/css/navbar.css" />
-    <link rel="stylesheet" href="../assets/css/responsive.css" />
+    <link rel="stylesheet" href="../assets/css/navbar.css">
+    <link rel="stylesheet" href="../assets/css/nav-responsive.css">
     <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/footer.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -114,5 +115,6 @@
     ></script>
     <script src="../assets/js/script-spec.js"></script>
     <script src="../assets/js/script-hasil.js"></script>
+    <script src="../assets/js/img-slide.js"></script>
   </body>
 </html>
