--- a/page-extra/page-panduan.html
+++ b/page-extra/page-panduan.html
@@ -6,8 +6,9 @@
     <title>Vision - panduan</title>
     <link rel="stylesheet" href="../assets/css/style-panduan.css" />
     <link rel="stylesheet" href="../assets/css/navbar.css" />
-    <link rel="stylesheet" href="../assets/css/responsive.css" />
+    <link rel="stylesheet" href="../assets/css/nav-responsive.css">
     <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/footer.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,11 +25,11 @@
         <ul
           class="nav-content d-flex justify-content-center align-items-center gap-4 w-auto bg-white p-2 ps-4 pe-4 rounded rounded-5"
         >
-          <li class="nav-item active"><a href="../index.html">Beranda</a></li>
+          <li class="nav-item"><a href="../index.html">Beranda</a></li>
           <li class="nav-item">
             <a href="page-bandingkan.html">Bandingkan</a>
           </li>
-          <li class="nav-item"><a href="page-panduan.html">Panduan</a></li>
+          <li class="nav-item active"><a href="page-panduan.html">Panduan</a></li>
           <i class="fa-solid fa-magnifying-glass"></i>
         </ul>
       </nav>
@@ -361,5 +362,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="../assets/js/img-slide.js"></script>
   </body>
 </html>
