update fitur spek

--- a/index.html
+++ b/index.html
@@ -129,26 +129,26 @@
                 <div class="parent-card">
                     <div class="card">
                         <img src="assets/img/Rectangle 173.png" alt="">
-                        <h1>VRONE PLUS</h1>
-                        <p>VRONE</p>
+                        <h1>APPLE VISION PRO</h1>
+                        <p>APPLE</p>
                         <center>
-                            <button><a class="text-light" href="page-extra/page-spec.html">Lihat VR <i class="fa-solid fa-angle-right"></i></a></button>
+                            <button><a class="text-light" href="page-extra/page-spec.html" id="sendDataApple">Lihat VR <i class="fa-solid fa-angle-right"></i></a></button>
                         </center>
                     </div>
                     <div class="card">
                         <img src="assets/img/Rectangle 175.png" alt="">
-                        <h1>VRONE PLUS</h1>
-                        <p>VRONE</p>
+                        <h1>META QUEST 3</h1>
+                        <p>META</p>
                         <center>
-                            <button><a class="text-light" href="page-extra/page-spec.html">Lihat VR <i class="fa-solid fa-angle-right"></i></a></button>        
+                            <button><a class="text-light" href="page-extra/page-spec.html" id="sendDataMeta">Lihat VR <i class="fa-solid fa-angle-right"></i></a></button>        
                         </center>
                     </div>
                     <div class="card">
                         <img src="assets/img/Rectangle 176.png" alt="">
-                        <h1>VRONE PLUS</h1>
-                        <p>VRONE</p>
+                        <h1>LENOVO MIRAGE SOLO</h1>
+                        <p>LENOVO</p>
                         <center>
-                            <button><a class="text-light" href="page-extra/page-spec.html">Lihat VR <i class="fa-solid fa-angle-right"></i></a></button>        
+                            <button><a class="text-light" href="page-extra/page-spec.html" id="sendDataLenovo">Lihat VR <i class="fa-solid fa-angle-right"></i></a></button>        
                         </center>
                     </div>
                 </div>
@@ -495,5 +495,9 @@
         <!-- End Halaman -->
            <script src="assets/js/script.js"></script>
            <script src="assets/js/img-slide.js"></script>
+           <script src="assets/js/script-toSpec.js"></script>
+           <script>
+            localStorage.removeItem('key')
+          </script>
 </body>
 </html>
