--- a/page-extra/page-bandingkan.html
+++ b/page-extra/page-bandingkan.html
@@ -150,7 +150,7 @@
           <img src="../assets/icon/angle-up.png" width="20px" alt="" />
           <a
             id="productLink"
-            href="#"
+            href="page-hasil.html"
             class="m-0 text-white text-decoration-none"
           >
             Bandingkan produk
